--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-parallax-mouse": "^2.0.1",
-    "sass": "^1.69.5"
+    "react-parallax-mouse": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -27,6 +26,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
