--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
     "nanoid": "^5.0.2",
     "react": "^18.2.0",
