--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
-    "@types/bcrypt": "^5.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express-session": "^1.17.3",
     "mongoose": "^8.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -37,6 +37,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
