--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
@@ -41,6 +42,7 @@
     "@types/jest": "^29.5.11",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.7",
+    "@types/sharp": "^0.32.0",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
