--- a/client/package.json
+++ b/client/package.json
@@ -12,18 +12,21 @@
   "dependencies": {
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
+    "axios": "^1.6.5",
     "nanoid": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-parallax-mouse": "^2.0.1",
+    "react-query": "^3.39.3",
     "string-ts": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@types/react-helmet": "^6.1.8",
+    "@types/react-query": "^1.2.9",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-react": "^4.1.0",
