--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
     "axios": "^1.6.5",
+    "formik": "^2.4.5",
     "nanoid": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,7 +21,8 @@
     "react-icons": "^4.11.0",
     "react-parallax-mouse": "^2.0.1",
     "react-query": "^3.39.3",
-    "string-ts": "^2.0.0"
+    "string-ts": "^2.0.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.33",
