--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-parallax-mouse": "^2.0.1",
     "react-query": "^3.39.3",
     "string-ts": "^2.0.0",
+    "vite-plugin-environment": "^1.1.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "eslint": "^8.52.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "gh-pages": "^6.1.1",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
