--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "class-validator": "^0.14.0",
     "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
+    "multer": "1.4.5-lts.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.1"
