--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-session": "^2.1.0",
     "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
     "multer": "1.4.5-lts.1",
