--- a/server/package.json
+++ b/server/package.json
@@ -25,8 +25,10 @@
     "@nestjs/core": "^10.3.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.3.0",
+    "@types/cookie": "^0.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie": "^0.6.0",
     "cookie-session": "^2.1.0",
     "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
