--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
     "axios": "^1.6.5",
