--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ dist-ssr
 *.jpg
 *.png
 *.webp
-*.env
-*.env
+*.env.development
 .firebaserc
-./firebase.json
-.firebase/*
+firebase.json
+.firebase
+vite/*
